docs: add swagger for tasks route (get, delete)
